--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FisherBook">
         <activity
-            android:name=".MainActivity"
+            android:name=".Logo_Activity"
             android:label="@string/app_name"
             android:theme="@style/Theme.FisherBook.NoActionBar">
             <intent-filter>
@@ -20,6 +20,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".Text_Content_Activity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
+
+<!-- заменить  местами лого и маин активити-->
