Before custom array adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
         </activity>
         <activity android:name=".Text_Content_Activity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".settings.SettingsActivity" />
     </application>
 
 </manifest>
-
-<!-- заменить  местами лого и маин активити-->
